fix No Scrollbar fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,7 +76,6 @@
 }
 
 @layer utilities {
-  @variants responsive {
     /* Hide scrollbar for Chrome, Safari, and Opera */
     .no-scrollbar::-webkit-scrollbar {
       display: none;
@@ -88,5 +87,4 @@
       -ms-overflow-style: none; /* IE and Edge */
       scrollbar-width: none; /* Firefox */
     }
-  }
 }
